# SaltSith-Kenobi----zmq-plugin-prototype-

./: .gitmodules  CMakeLists.txt  config.h  main.c  rebuild
plugin/: CMakeLists.txt  plugin.c  plugin.h  plugin_socket.c  plugin_socket.h  plugin_task.c  plugin_task.h
plugin/plugin_socket/: CMakeLists.txt  plugin_socket.c  plugin_socket.h
plugin/plugin_socket/test/: test.c
plugin/test/: test.c
